--- a/config/database.yml
+++ b/config/database.yml
@@ -8,17 +8,17 @@ default: &default
   adapter: postgresql
   database: dont_buy_dev
   pool: 5
-  host: localhost
-  username: postgres
-  password: postgres
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   adapter: postgresql
   database: dont_buy_dev
   pool: 5
-  host: localhost
-  username: postgres
-  password: postgres
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -35,6 +35,6 @@ production:
   adapter: postgresql
   database: dont_buy
   pool: 5
-  host: localhost
-  username: postgres
-  password: postgres
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
